:lipstick: Fix border style on ProfileNav link on mobile

--- a/static/styles/profile.styl
+++ b/static/styles/profile.styl
@@ -78,9 +78,10 @@
 			&--open
 				.profile-nav-main-item
 					display: flex
-					border-bottom: 1px solid $grey-200
 
 					&--active
+						border-bottom: 1px solid $grey-200 !important
+
 						& svg
 							transform: rotate(90deg)
 
